# mailpot

./: CONTRIBUTING.md  Cargo.toml  Makefile  README.md  imap-protocol.tar.xz  index.html
.github/: doc_extra.html  grcov.yml
.github/workflows/: builds.yaml  grcov.yaml  rustdoc.yml  test.yaml
archive-http/: Cargo.toml  README.md
archive-http/src/: cal.rs  gen.rs  main.rs  utils.rs
archive-http/src/templates/: calendar.html  css.html  footer.html  header.html  index.html  list.html  lists.html  post.html
archive-http/templates/: header.html  index.html  list.html  lists.html  post.html
cli/: Cargo.toml  README.md  build.rs
cli/src/: args.rs  commands.rs  lib.rs  lints.rs  main.rs
cli/tests/: basic_interfaces.rs  out_queue_flush.rs
core/: Cargo.toml  README.md  build.rs  create_migration.py  make_migrations.rs
core/migrations/: 001.sql  001.undo.sql  002.sql  002.undo.sql  004.undo.sql  005.data.undo.sql  006.data.sql  007.data.sql  007.data.undo.sql
core/migrations/2020-08-16-164344_add_models/: down.sql  up.sql
core/migrations/2020-09-09-165759_membership_enabled/: down.sql  up.sql
core/settings_json_schemas/: addsubjecttagprefix.json  mimerejectsettings.json
core/src/: config.rs  connection.rs  db.rs  errors.rs  lib.rs  mail.rs  message_filters.rs  migrations.rs.inc  models.rs  policies.rs  post.rs  postfix.rs  posts.rs  queue.rs  schema.rs  schema.sql  schema.sql.m4  script.rs  submission.rs  subscriptions.rs  templates.rs
core/src/db/: error_queue.rs  members.rs  policies.rs  posts.rs  queue.rs  subscriptions.rs  templates.rs
core/src/doctests/: db_setup.rs.inc
core/src/mail/: message_filters.rs
core/src/message_filters/: settings.rs
core/src/models/: changesets.rs
core/tests/: account.rs  authorizer.rs  creation.rs  error_queue.rs  migrations.rs  settings_json.rs  smtp.rs  subscription.rs  template_replies.rs  test_sample_longmessage.eml  utils.rs
core/tools/: generate_configuration_json_schema.py
coverage/: -4353-11659292169951129570_0.profraw  -4353-3324791113656318441_0.profraw  -4482-15199588209634748192_0.profraw  -4700-14066116512279160446_0.profraw  -4700-3324791113656318441_0.profraw  -4700-6651870142362954452_0.profraw  -4707-14066116512279160446_0.profraw  -4707-3324791113656318441_0.profraw  -4707-6651870142362954452_0.profraw  -4713-11659292169951129570_0.profraw  -4713-14066116512279160446_0.profraw  -4713-3324791113656318441_0.profraw  -4713-6651870142362954452_0.profraw  -4725-14066116512279160446_0.profraw  -4725-3324791113656318441_0.profraw  -4725-6651870142362954452_0.profraw  -4733-14066116512279160446_0.profraw  -4733-3324791113656318441_0.profraw  -4733-6651870142362954452_0.profraw  -4753-11659292169951129570_0.profraw  -4753-14066116512279160446_0.profraw  -4753-3324791113656318441_0.profraw  -4753-6651870142362954452_0.profraw  -4771-11659292169951129570_0.profraw  -4771-14066116512279160446_0.profraw  -4771-3324791113656318441_0.profraw  -4771-6651870142362954452_0.profraw  -4783-14066116512279160446_0.profraw  -4783-3324791113656318441_0.profraw  -4783-6651870142362954452_0.profraw  -4863-14066116512279160446_0.profraw  -4863-3324791113656318441_0.profraw  -4863-6651870142362954452_0.profraw  -4873-14066116512279160446_0.profraw  -4873-3324791113656318441_0.profraw  -4873-6651870142362954452_0.profraw  -4883-14066116512279160446_0.profraw  -4883-3324791113656318441_0.profraw  -4883-6651870142362954452_0.profraw  -4886-14066116512279160446_0.profraw  (+70 more)
coverage/html/: coverage.json  index.html
docs/: command.mdoc  crates.js  error_queue.mdoc  footer.mdoc  header.mdoc  help.html  list.mdoc  mailpot.1  mailpot.1.m4  main.mdoc  mpot.1  scrape-examples-help.html  scratchpad.md  search-index.js  settings.html  source-files.js
docs/mailpot/: all.html  constant.FRAGMENT.html  constant.PATH.html  constant.PATH_SEGMENT.html  enum.ErrorKind.html  enum.Queue.html  enum.SendMail.html  fn.utf8_percent_encode.html  index.html  (+15 more)
mailpot/: Cargo.toml
mailpot-archives/: Cargo.toml
mailpot-archives/src/: cal.rs  gen.rs  lib.rs  main.rs  utils.rs
mailpot-archives/src/templates/: css.html  header.html  index.html  list.html  menu.html  post.html
mailpot-cli/: Cargo.toml  build.rs
mailpot-cli/src/: args.rs  commands.rs  import.rs  lib.rs  lints.rs  main.rs  message_filter_settings.rs
mailpot-cli/tests/: basic_interfaces.rs  message_filter_settings.rs  out_queue_flush.rs
mailpot-http/: .gitignore  Cargo.toml  README.md
mailpot-http/config/: test.json
mailpot-http/src/: errors.rs  main.rs  settings.rs
mailpot-http/src/routes/: list.rs
mailpot-tests/: Cargo.toml  README.md  for_testing.db  for_testing.sql
mailpot-tests/src/: lib.rs
mailpot-web/: Cargo.toml  README.md  build.rs
mailpot/migrations/: 001.undo.sql  003.sql  003.undo.sql  004.sql  005.data.sql  006.data.undo.sql
mailpot/settings_json_schemas/: archivedatlink.json
mailpot/src/: config.rs  connection.rs  lib.rs  mail.rs  message_filters.rs  migrations.rs.inc  models.rs  policies.rs  postfix.rs  posts.rs  schema.sql.m4  templates.rs
mailpot/src/doctests/: db_setup.rs.inc
mailpot/src/message_filters/: settings.rs
mailpot/tests/: creation.rs  error_queue.rs  message_filters.rs  migrations.rs  settings_json.rs  smtp.rs  ssh_key  ssh_key.pub  subscription.rs  template_replies.rs
rest-http/: Cargo.toml  README.md
rest-http/config/: default.json
rest-http/src/: lib.rs  main.rs
rest-http/src/routes/: list.rs
src/: config.rs  db.rs  errors.rs  main.rs  models.rs  post.rs
web/: .gitignore  Cargo.toml  README.md  build.rs  rsa.pub
web/src/: auth.rs  cal.rs  help.rs  lib.rs  lists.rs  main.rs  minijinja_utils.rs  settings.rs  testRSA1024_to_ssh.py  topics.rs  typed_paths.rs  utils.rs
web/src/minijinja_utils/: compressed.rs
web/src/templates/: auth.html  calendar.html  css.html  footer.html  header.html  help.html  index.html  list.html  lists.html  menu.html  post.html  settings.html  settings_subscription.html  topics.html
web/src/templates/lists/: edit.html  entry.html  list.html  post.html  sub-requests.html
(+1113 files in other folders)
