[package]
name = "mailpot"
version = "0.1.0"
authors = ["Manos Pitsidianakis <el13635@mail.ntua.gr>"]
edition = "2018"
license = "LICENSE"
readme = "README.md"
description = "mailing list manager"
repository = "https://github.com/meli/mailpot"
keywords = ["mail", "mailing-lists" ]
categories = ["email"]
default-run = "mpot"

[dependencies]
chrono = { version = "0.4.15", features = ["serde", ] }
error-chain = "0.12.4"
melib = { version = "*", default-features = false, features = ["smtp", "unicode_algorithms"], git="https://github.com/meli/meli", branch = "master" }
rusqlite = {version = "0.20.0"}
serde = { version = "1.0.114" }
structopt = "0.3.16"
xdg = "2.1.0"
