[package]
name = "mailpot-archives"
version = "0.1.0"
authors = ["Manos Pitsidianakis <el13635@mail.ntua.gr>"]
edition = "2021"
license = "LICENSE"
readme = "README.md"
description = "mailing list manager"
repository = "https://github.com/meli/mailpot"
keywords = ["mail", "mailing-lists"]
categories = ["email"]
default-run = "mpot-archives"

[[bin]]
name = "mpot-archives"
path = "src/main.rs"
required-features = ["warp"]

[[bin]]
name = "mpot-gen"
path = "src/gen.rs"

[dependencies]
chrono = { version = "^0.4" }
lazy_static = "^1.4"
mailpot = { version = "^0.1", path = "../core" }
minijinja = { version = "0.31.0", features = ["source", ] }
percent-encoding = { version = "^2.1", optional = true }
serde = { version = "^1", features = ["derive", ] }
serde_json = "^1"
tokio = { version = "1", features = ["full"], optional = true }
warp = { version = "^0.3", optional = true }

[features]
default = ["gen"]
gen = []
warp = ["dep:percent-encoding", "dep:tokio", "dep:warp"]
