[package]
name = "mailpot-cli"
version = "0.0.0+2023-04-21"
authors = ["Manos Pitsidianakis <el13635@mail.ntua.gr>"]
edition = "2021"
license = "LICENSE"
readme = "README.md"
description = "mailing list manager"
repository = "https://github.com/meli/mailpot"
keywords = ["mail", "mailing-lists"]
categories = ["email"]
default-run = "mpot"

[[bin]]
name = "mpot"
path = "src/main.rs"

[dependencies]
clap = { version = "^4.2", default-features = false, features = ["derive", "cargo", "unicode", "help", "usage", "error-context", "suggestions"] }
log = "0.4"
mailpot = { version = "^0.0", path = "../core" }
stderrlog = "^0.5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3.3"

[build-dependencies]
clap = { version = "^4.2", default-features = false, features = ["derive", "cargo", "unicode", "wrap_help", "help", "usage", "error-context", "suggestions"] }
clap_mangen = "0.2.10"
stderrlog = "^0.5"
