[package]
name = "mailpot-cli"
version = "0.1.1"
authors = ["Manos Pitsidianakis <el13635@mail.ntua.gr>"]
edition = "2021"
license = "LICENSE"
readme = "README.md"
description = "mailing list manager"
repository = "https://github.com/meli/mailpot"
keywords = ["mail", "mailing-lists"]
categories = ["email"]
default-run = "mpot"

[[bin]]
name = "mpot"
path = "src/main.rs"

[dependencies]
base64 = { version = "0.21" }
clap = { version = "^4.2", default-features = false, features = ["derive", "cargo", "unicode", "help", "usage", "error-context", "suggestions"] }
log = "0.4"
mailpot = { version = "^0.1", path = "../core" }
serde = { version = "^1", features = ["derive", ] }
serde_json = "^1"
stderrlog = "^0.5"
ureq = { version = "2.6", default-features = false }

[dev-dependencies]
assert_cmd = "2"
mailpot-tests = { version = "^0.1", path = "../mailpot-tests" }
predicates = "3"
tempfile = "3.3"

[build-dependencies]
clap = { version = "^4.2", default-features = false, features = ["derive", "cargo", "unicode", "wrap_help", "help", "usage", "error-context", "suggestions"] }
clap_mangen = "0.2.10"
stderrlog = "^0.5"
