[package]
name = "mailpot-http"
version = "0.1.1"
authors = ["Manos Pitsidianakis <el13635@mail.ntua.gr>"]
edition = "2021"
license = "LICENSE"
readme = "README.md"
description = "mailing list manager"
repository = "https://github.com/meli/mailpot"
keywords = ["mail", "mailing-lists"]
categories = ["email"]
default-run = "mpot-http"

[[bin]]
name = "mpot-http"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
axum = { version = "0.6", features = ["headers"] }
axum-extra = { version = "^0.7", features = ["typed-routing"] }
#jsonwebtoken = "8.3"
bcrypt = "0.14"
config = "0.13"
http = "0.2"
lazy_static = "1.4"
log = "0.4"
mailpot = { version = "^0.1", path = "../mailpot" }
mailpot-web = { version = "^0.1", path = "../mailpot-web" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stderrlog = { version = "^0.6" }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = [
    "trace",
    "compression-br",
    "propagate-header",
    "sensitive-headers",
    "cors",
] }

[dev-dependencies]
assert-json-diff = "2"
hyper = { version = "0.14" }
mailpot-tests = { version = "^0.1", path = "../mailpot-tests" }
reqwest = { version = "0.11", features = ["json"] }
tempfile = { version = "3.9" }
tower = { version = "^0.4" }
