[package]
name = "mailpot-tests"
version = "0.1.1"
authors = ["Manos Pitsidianakis <manos@pitsidianak.is>"]
edition = "2021"
license = "LICENSE"
readme = "README.md"
description = "test library for mailpot crates"
repository = "https://github.com/meli/mailpot"
publish = false

[dependencies]
assert_cmd = "2"
log = "0.4"
mailin-embedded = { version = "0.8", features = ["rtls"] }
mailpot = { version = "^0.1", path = "../mailpot" }
predicates = "3"
stderrlog = { version = "^0.6" }
tempfile = { version = "3.9" }

[dev-dependencies]
