[package]
name = "mailpot"
version = "0.1.1"
authors = ["Manos Pitsidianakis <el13635@mail.ntua.gr>"]
edition = "2021"
license = "LICENSE"
readme = "README.md"
description = "mailing list manager"
repository = "https://github.com/meli/mailpot"
keywords = ["mail", "mailing-lists"]
categories = ["email"]
build = "build/mod.rs"

[lib]
doc-scrape-examples = true

[dependencies]
anyhow = "1.0.58"
chrono = { version = "^0.4", features = ["serde", ] }
data-encoding = { version = "2.1.1" }
jsonschema = { version = "0.17", default-features = false }
log = "0.4"
melib = { version = "0.8.7", default-features = false, features = ["mbox", "smtp", "maildir"] }
minijinja = { version = "0.31.0", features = ["source", ] }
percent-encoding = { version = "^2.1" }
rusqlite = { version = "^0.30", features = ["bundled", "functions", "trace", "hooks", "serde_json", "array", "chrono", "unlock_notify"] }
serde = { version = "^1", features = ["derive", ] }
serde_json = { version = "^1" }
thiserror = { version = "1.0.48", default-features = false }
toml = { version = "^0.8.14" }
xdg = "2.4.1"

[dev-dependencies]
mailpot-tests = { version = "^0.1", path = "../mailpot-tests" }
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking"] }
stderrlog = { version = "^0.6" }
tempfile = { version = "3.9" }

[build-dependencies]
jsonschema = { version = "0.17", default-features = false }
quote = { version = "1" }
serde_json = { version = "^1" }
