[package]
name = "mailpot-http"
version = "0.0.0+2023-04-21"
authors = ["Manos Pitsidianakis <el13635@mail.ntua.gr>"]
edition = "2021"
license = "LICENSE"
readme = "README.md"
description = "mailing list manager"
repository = "https://github.com/meli/mailpot"
keywords = ["mail", "mailing-lists"]
categories = ["email"]
default-run = "mpot-http"

[[bin]]
name = "mpot-http"
path = "src/main.rs"

[dependencies]
mailpot = { version = "^0.0", path = "../core" }
tokio = { version = "^1", features = ["full"] }
warp = "^0.3"
