[package]
name = "mailpot-web"
version = "0.1.1"
authors = ["Manos Pitsidianakis <el13635@mail.ntua.gr>"]
edition = "2021"
license = "LICENSE"
readme = "README.md"
description = "mailing list manager"
repository = "https://github.com/meli/mailpot"
keywords = ["mail", "mailing-lists"]
categories = ["email"]

[[bin]]
name = "mpot-web"
path = "src/main.rs"
doc-scrape-examples = true

[features]
default = ["ssh-key"]
ssh-key = ["dep:ssh-key"]

[dependencies]
axum = { version = "^0.6" }
axum-extra = { version = "^0.7", features = ["typed-routing"] }
axum-login = { version = "^0.5" }
axum-sessions = { version = "^0.5" }
build-info = { version = "0.0.31" }
cfg-if = { version = "1" }
chrono = { version = "^0.4" }
convert_case = { version = "^0.4" }
dyn-clone = { version = "^1" }
eyre = { version = "0.6" }
http = "0.2"
indexmap = { version = "1.9" }
lazy_static = "^1.4"
mailpot = { version = "^0.1", path = "../core" }
minijinja = { version = "0.31.0", features = ["source", ] }
percent-encoding = { version = "^2.1" }
rand = { version = "^0.8", features = ["min_const_gen"] }
serde = { version = "^1", features = ["derive", ] }
serde_json = "^1"
ssh-key = { version = "0.6.2", optional = true, features = ["crypto"] }
stderrlog = { version = "^0.6" }
tempfile = { version = "3.9" }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "^0.3" }
tower-service = { version = "^0.3" }
zstd = { version = "0.12", default-features = false }

[dev-dependencies]
hyper = { version = "0.14" }
mailpot-tests = { version = "^0.1", path = "../mailpot-tests" }
serde_urlencoded = { version = "^0.7" }
tempfile = { version = "3.9" }
tower = { version = "^0.4" }

[build-dependencies]
build-info-build = { version = "0.0.31" }
zstd = { version = "0.12", default-features = false }
